## This is a automake file, part of Unidata's netCDF package.
# Copyright 2012-2019, see the COPYRIGHT file for more information.

# This is the automake file for CMakeExtras dir. This holds extra
# stuff needed for the CMake build. Include them so the dist contains
# a working CMake build.

# Russ Rew, Ward Fisher
EXTRA_DIST = sizeof_ptrdiff_t.c test_c_ptrdiff_t.f90	\
MatchNetCDFFortranTypes.cmake check_relax_coord_bound.c	\
check_pnetcdf.c check_parallel4.c check_cdf5.c
